--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+img {
+  width: 250px;
+  height: 200px;
+  object-fit: cover;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 20px;
+  border: 2px solid black;
+}
+.dropdowns {
+  display: flex;
+  flex-direction:column;
+}
