--- a/src/App.css
+++ b/src/App.css
@@ -47,5 +47,10 @@ img {
 }
 .dropdowns {
   display: flex;
-  flex-direction:column;
+  flex-direction:row;
+  justify-content: center;
+  margin: 10px;
+}
+select {
+  margin: 10px;
 }
