--- a/src/App.css
+++ b/src/App.css
@@ -36,14 +36,31 @@
     transform: rotate(360deg);
   }
 }
+main {
+  background-size:cover;
+  height: 1000px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.5rem;
+}
+header {
+  height: 75px;
+  font-family:monospace;
+  font-size: 2rem;
+}
+p {
+  font-family: monospace;
+  font-size: 2rem;
+  background-color: rgba(211, 211, 211, 0.546);
+}
 img {
-  width: 250px;
-  height: 200px;
+  width: 300px;
+  height: 250px;
   object-fit: cover;
   padding: 10px;
   margin: 10px;
   border-radius: 20px;
-  border: 2px solid black;
+  background-color: rgba(211, 211, 211, 0.546);
+  border: 2px solid rgb(47, 46, 46);
 }
 .dropdowns {
   display: flex;
@@ -62,7 +79,8 @@ input {
   flex-direction: row;
   justify-content: center;
 }
-h3 {
-  display: flex;
-  flex-direction: column;
+.displayInfo {
+  background-color: rgba(211, 211, 211, 0.546);
+  font-family: monospace;
+  font-size: 1.5rem;
 }
