--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,8 @@ img {
 }
 select {
   margin: 10px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1rem;
 }
 input {
   margin: 10px;
@@ -83,4 +85,12 @@ input {
   background-color: rgba(211, 211, 211, 0.546);
   font-family: monospace;
   font-size: 1.5rem;
+}
+button {
+  font-family: monospace;
+  font-size: 1.25rem
+}
+input {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.25rem;
 }
